docs/book/samples/appc/keyed_order_check.out
error[formatting]: keyed reads list fields in alphabetical order: `admin` before `name`
  --> keyed_order_check.kso:6:10
   6 |   { name admin } = user false "clay"
                ^
