docs/book/samples/appc/keyed_order_check.kso
type user
  admin:bool
  name:string

pub play =
  { name admin } = user false "clay"
  print "{name} {admin}"
